// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source hello1.prw 1`] = `
#include "protheus.ch"

user function hello1() 
conout("hello")

user function hello2()
local x := time()

conout("hello 2")
conout (x)

return
----------
conout(
"hello"local
x
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
`;

exports[`Source hello2.prw 1`] = `
#include "protheus.ch"

user func hello1() 
conout("hello 1")
conout("hello 2")
conout("hello 3")
conout("hello 4")
conout("hello 5")
retur

user func hello2()



local x := time()



retur
----------
conout(
"hello 1"local
x
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
`;
